# sentinel-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  TESTING.md  buggy_utils.py  dashboard.py  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.sh  test_integration.py  test_manual.py  test_review.md
.github/: workflows
.github/workflows/: ci.yml
docs/: MARKETPLACE_LISTING.md  README.md  api.md  architecture.md  index.html
screenshots/: .gitkeep
scripts/: generate_github_app_manifest.py  migrate.py
secrets/: gh_private_key.pem  gh_public_key.pem
sentinel_ai/: __init__.py  config.py  gh_auth.py  llm_reviewer.py  main.py  models.py  scanners.py
tests/: test_auth.py  test_models.py  test_placeholder.py  test_scanners.py
