[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
version = "0.1.0"
description = "AI-powered PR security and quality reviewer"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Oyebanji Adegboyega", email = "xanderaicorp@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
scanners = [
    "bandit>=1.7.0",
    "flake8>=6.1.0",
    "semgrep>=1.60.0",
]
memory = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.0",
]
dashboard = [
    "streamlit>=1.33.0",
    "plotly>=6.7.0",
    "pandas>=2.2.0",
]
all = [
    "sentinel-ai[dev,scanners,memory,dashboard]",
]

[project.scripts]
sentinel = "sentinel_ai.cli:main"

[tool.setuptools.packages.find]
include = ["sentinel_ai*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
